Добавлен jekyll YEAH!

--- a/_posts/2022-06-27-Линейные-уравнения.markdown
+++ b/_posts/2022-06-27-Линейные-уравнения.markdown
@@ -1,4 +1,9 @@
-# Уравнение. Линейное уравнение. График уравнения.
+---
+layout: post
+title: Линейные уравнения
+---
+
+Уравнение. Линейное уравнение. График уравнения
 
 Начнем курс школьной алгебры с понятия уравнения и линейного уравнения. 
 Уравнением в математике называется равенство, в котором неизвестна одна или несколько величин.
@@ -23,7 +28,9 @@ $$
 $$
 
 где a, b и c - какие-то числа, а x - неизвестное. 
-Линейное уравнение - это уравнение, в котором все неизвестные величины в первой степени (нет $x^2$ или $x^\frac{1}{2}$).
+Линейное уравнение - это уравнение, в котором все 
+неизвестные величины в первой степени 
+(нет $$x^2$$ или $$x^\frac{1}{2}$$).
 
 Решаются такие уравнения очень просто: достаточно перенести с левой части в правую 
 число без неизвестной (константу, что изображена в общем виде лин. уравнения как b), 
@@ -64,7 +71,7 @@ $$
 А что будет, если в координатной плоскости xOy поставить все 
 точки - решения этого уравнения?
 
-![График линейного уравнения](./linear_eq_graphic.png)
+![График линейного уравнения](/img/linear_eq_graphic.png)
 
 Получится ни что иное, как прямая. 
 Поэтому уравнение и называется линейным - 
