Исправления с картинкой в статье

--- a/_posts/2022-06-27-Линейные-уравнения.markdown
+++ b/_posts/2022-06-27-Линейные-уравнения.markdown
@@ -71,7 +71,7 @@ $$
 А что будет, если в координатной плоскости xOy поставить все 
 точки - решения этого уравнения?
 
-![График линейного уравнения](/img/linear_eq_graphic.png)
+![График линейного уравнения](/math/img/linear_eq_graphic.png)
 
 Получится ни что иное, как прямая. 
 Поэтому уравнение и называется линейным - 
