Добавлена статья про Квадратные уравнения

--- a/_posts/2022-06-27-Линейные-уравнения.markdown
+++ b/_posts/2022-06-27-Линейные-уравнения.markdown
@@ -3,7 +3,7 @@ layout: post
 title: Линейные уравнения
 ---
 
-Уравнение. Линейное уравнение. График уравнения
+# Уравнение. Линейное уравнение. График уравнения
 
 Начнем курс школьной алгебры с понятия уравнения и линейного уравнения. 
 Уравнением в математике называется равенство, в котором неизвестна одна или несколько величин.
